<resources>
    <string name="app_name">V I B G Y O R</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="color_selected">Color Selected : %1s</string>
</resources>
